# auto_forklift_pallet_detection

./: README.md
src/forklift_simulator/: CMakeLists.txt  README.md  package.xml
src/forklift_simulator/config/: EVX_14_control.yaml  RX20_16_control.yaml  ackermansteer.yaml  blue_container_control.yaml  red_container_control.yaml
src/forklift_simulator/launch/: RX20_16_control.launch  container_control.launch  container_simulation.launch  forklift_control.launch  forklift_simulation.launch  test.launch  visualize.launch
src/forklift_simulator/models/example_factory/: model.config  model.sdf
src/forklift_simulator/models/example_factory/meshes/: example_factory_floor.dae  example_factory_nofloor.dae
src/forklift_simulator/models/pallet/: model.config  model.sdf
src/forklift_simulator/models/pallet/meshes/: pallet_1_1.dae  pallet_eu.dae
src/forklift_simulator/models/presswood_pallet/: model.config  model.sdf
src/forklift_simulator/models/presswood_pallet/meshes/: presswood_pallet.dae
src/forklift_simulator/models/red_container/: model.config  model.sdf
src/forklift_simulator/models/red_container/meshes/: container_ramp.dae  red_container.dae
src/forklift_simulator/rviz/: simulator.rviz
src/forklift_simulator/scripts/: keyboard_control.py
src/forklift_simulator/src/: keyboard_control_RX20_16.cpp  keyboard_control_container_door.cpp  keyboard_control_forklift.cpp  test.cpp  test_subs.cpp
src/forklift_simulator/urdf/EVX_14/: base.xacro  camera.xacro  d435_camera.xacro  detection_lidar.xacro  drive_wheels.xacro  load_fork_joint.xacro  load_wheels.xacro  main.xacro  nav_lidar.xacro  robot_evx.xacro  wheel_control.xacro
src/forklift_simulator/urdf/EVX_14/meshes/: EVX_14_base.dae  EVX_14_drive_wheel.dae  EVX_14_load_fork.dae  EVX_14_load_wheel.dae  EVX_14_steering_rod.dae
src/forklift_simulator/urdf/RX20_16/: base.xacro  camera.xacro  d435_camera.xacro  d435_sensor.xacro  detection_lidar.xacro  front_wheels.xacro  inertia.xacro  lib_ackermansteer.xacro  loading_forklift_joints.xacro  main.xacro  nav_lidar.xacro  steer_wheels.xacro  wheel_control.xacro
src/forklift_simulator/urdf/RX20_16/meshes/: body.dae  front_wheel.dae  lift_link.dae  rear_wheel.dae  sideshift_link.dae  steering_rod.dae  tilt_link.dae
src/forklift_simulator/urdf/blue_container/: base.xacro  container_lift.xacro  left_door.xacro  main.xacro  ramp.xacro  right_door.xacro
src/forklift_simulator/urdf/blue_container/meshes/: blue_container_body.dae  ramp.dae
src/forklift_simulator/urdf/red_container/: base.xacro  left_door.xacro  main.xacro  right_door.xacro
src/forklift_simulator/urdf/red_container/meshes/: red_container_box.dae  red_container_left_door.dae  red_container_right_door.dae
src/forklift_simulator/worlds/: empty.world  example_factory.world
src/multi_pallet_detection/: CMakeLists.txt  package.xml
src/multi_pallet_detection/cfg/: palletDetectionReconfigureConfig.h  pallet_detection_reconfig.cfg
src/multi_pallet_detection/include/: plane_segmentation.h
src/multi_pallet_detection/launch/: pallet_detection.launch  plane_segmentation.launch  realsense_pcl2.launch  visualize.launch
src/multi_pallet_detection/rviz/: simulator.rviz
src/multi_pallet_detection/src/: backup.cpp  main.cpp  pallet_detection.cpp  pallet_segmentation_client.cpp  plane_segmentation.cpp
src/multi_pallet_detection/template/: pallet1cell1cm.xcf
